@@ -25,6 +25,9 @@ import java.util.UUID;
 
 import com.google.common.base.Preconditions;
 
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
+
 import org.apache.cassandra.locator.InetAddressAndPort;
 import org.apache.cassandra.repair.messages.FailSession;
 import org.apache.cassandra.repair.messages.FinalizePromise;
@@ -37,6 +40,7 @@ import org.apache.cassandra.service.ActiveRepairService;
 public class CoordinatorSessions
 {
     private final Map<UUID, CoordinatorSession> sessions = new HashMap<>();
+    private static final Logger logger = LoggerFactory.getLogger(CoordinatorSessions.class);
 
     protected CoordinatorSession buildSession(CoordinatorSession.Builder builder)
     {
@@ -61,6 +65,7 @@ public class CoordinatorSessions
         builder.withRepairedAt(prs.repairedAt);
         builder.withRanges(prs.getRanges());
         builder.withParticipants(participants);
+        builder.withListener(this::onSessionStateUpdate);
         CoordinatorSession session = buildSession(builder);
         sessions.put(session.sessionID, session);
         return session;
@@ -69,6 +74,15 @@ public class CoordinatorSessions
     public synchronized CoordinatorSession getSession(UUID sessionId)
     {
         return sessions.get(sessionId);
+    }
+
+    public synchronized void onSessionStateUpdate(CoordinatorSession session)
+    {
+        if (session.isCompleted())
+        {
+            logger.info("Removing completed session {} with state {}", session.sessionID, session.getState());
+            sessions.remove(session.sessionID);
+        }
     }
 
     public void handlePrepareResponse(PrepareConsistentResponse msg)
